# school-mosru-viewer

./: .gitignore  README.md  flake.nix
parsing/: Cargo.toml
parsing/src/: api.rs  database.rs  main.rs  raw_types.rs  time.rs  types.rs
parsing/src/localfirst/: fetcher.rs  mod.rs
parsing/src/raw_types/: details.rs  enums.rs  homework.rs  marks.rs  mod.rs  schedule.rs
