[package]
name = "parsing"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
dotenvy = "0.15.7"
reqwest = { version = "0.12.20", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tokio = { version = "1.45.1", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }
