[package]
name = "parsing"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
crossterm = "0.29.0"
dotenvy = "0.15.7"
log = "0.4.27"
reqwest = { version = "0.12.20", default-features = false, features = [
    "json",
    "rustls-tls",
    "blocking",
] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
